Correction css pour rendre invisible la div infoStock

--- a/Projet1Parent/Projet1Web/src/main/webapp/css/styleAdmin.css
+++ b/Projet1Parent/Projet1Web/src/main/webapp/css/styleAdmin.css
@@ -7,6 +7,12 @@ h3
 	margin-bottom:5%;
 }
 
+/*** ACCUEIL ADMIN ***/
+
+#infoStock{
+	visibility:hidden;
+}
+
 	/*** DATA TABLE ***/
 	
 .table
